Fix overflowing tags for wrongly formatted meta keywords (#242)

--- a/resources/assets/sass/custom/_fixes.scss
+++ b/resources/assets/sass/custom/_fixes.scss
@@ -36,3 +36,8 @@
     @include pagination-size($pagination-padding-y-sm, $pagination-padding-x-sm, $font-size-sm, $line-height-sm, $border-radius-sm);
   }
 }
+
+.badge-wrap {
+  white-space: normal;
+  max-width: 100%;
+}
